# eval-kanban

./: .gitignore  Cargo.toml  README.md  SPEC.md
.claude/: ARCHITECTURE.md  CLAUDE.md  settings.json  settings.local.json
.claude/agents/: code-reviewer.md  memory-sync.md  test-fixer.md  visual-validator.md
.claude/commands/: debug.md  feature.md
.claude/commands/debug/: 01-reproduce.md  02-investigate.md  03-fix.md  04-verify.md  05-commit.md  06-evaluate.md  self-healing.md
.claude/commands/feature/: 01-interview.md  02-spec.md  03-planner.md  04-implement.md  05-quality.md  06-commit.md  07-evaluate.md
.claude/plans/: current.md
.claude/specs/: fase1-mvp-2025-01-16.md
.claude/templates/: spec-template.md
.github/workflows/: release.yml
crates/db/: Cargo.toml
crates/db/migrations/: 001_create_tasks.sql  002_add_worktree_fields.sql
crates/db/src/: lib.rs
crates/db/src/models/: chat.rs  mod.rs  task.rs
crates/executor/: Cargo.toml
crates/executor/src/: claude.rs  lib.rs
crates/server/: Cargo.toml
crates/server/bundled-claude/: ARCHITECTURE.md  CLAUDE.md  settings.json
crates/server/bundled-claude/agents/: code-simplifier.md  dry-enforcer.md  memory-sync.md  terraform-validator.md  test-fixer.md  visual-validator.md
crates/server/bundled-claude/commands/: debug.md  feature.md  gate.md
crates/server/bundled-claude/commands/debug/: 01-investigate.md  02-fix.md  03-verify.md
crates/server/bundled-claude/commands/feature/: 01-interview.md  02-spec.md  03-planner.md  04-implement.md  05-quality.md
crates/server/src/: bundled_config.rs  config_setup.rs  main.rs  plan_session.rs  state.rs
crates/server/src/routes/: chat.rs  mod.rs  plan.rs  preview.rs  review.rs  server.rs  tasks.rs  ws.rs
crates/worktree/: Cargo.toml
crates/worktree/src/: diff.rs  lib.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessages.tsx  ChatSidebar.tsx  ClaudeOutputLine.tsx  Counter.test.tsx  Counter.tsx  CreateTaskModal.tsx  DiffViewer.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LogPanel.tsx  PlanModeQA.tsx  PlanSummary.tsx  PreviewControls.tsx  ReviewPanel.tsx  ServerStatusBadge.tsx  TaskCard.tsx  TaskDetailsModal.tsx
frontend/src/hooks/: useChat.ts  useDiff.test.tsx  useDiff.ts  usePlanMode.ts  usePreview.test.tsx  usePreview.ts  useServerHealth.ts  useTasks.ts  useWebSocket.ts
npx-cli/: package-lock.json  package.json
(+30 files in other folders)
