[package]
name = "eval-kanban-executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_spawn"
path = "src/bin/test_spawn.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
