[package]
name = "eval-kanban-server"
version = "0.1.0"
edition = "2021"

[dependencies]
eval-kanban-db = { path = "../db" }
eval-kanban-executor = { path = "../executor" }
eval-kanban-worktree = { path = "../worktree" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
